--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "docker-start": "docker run -p 3000:3000 -v /app/node_modules -v $(pwd):/app 49a213502397"
   },
   "eslintConfig": {
     "extends": "react-app"
