--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ deploy:
   app: "Docker-React"
   env: "DockerReact-env"
   bucket_name: elasticbeanstalk-eu-west-2-597059939459
-  bucket_path: "Docker-React"
+  bucket_path: "DockerReact"
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
