--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,12 @@ deploy:
   provider: elasticbeanstalk
   region: "eu-west-2"
   app: "Docker-React"
-  env: "DockerReact-env"
+  env: "Docker-React-environment"
   bucket_name: elasticbeanstalk-eu-west-2-597059939459
   bucket_path: "DockerReact"
   on:
     branch: master
-  access_key_id: $AWS_ACCESS_KEY
+  access_key_id: 
+    secure: $AWS_ACCESS_KEY
   secret_access_key: 
     secure: "$AWS_ACCESS_KEY"
